--- a/quienes somos.html
+++ b/quienes somos.html
@@ -14,17 +14,17 @@
 
 
 <p><center> 
-<a href="https://danilotery.github.io/entrenamiento-personal/"><img src="C:\Users\Usuario\Downloads\INIC.png"width="75"title="boton de inicio">
+<a href="https://danilotery.github.io/entrenamiento-personal/"><img src="img/INIC.png" width="75"title="boton de inicio">
 <href="inicio.html"
  </a>  
-<a> <img src="C:\Users\Usuario\Downloads\quienes somos.png"width="200" title="boton quienes somos">
+<a> <img src="img/quienes somos.png"width="200" title="boton quienes somos">
 
-<img src="C:\Users\Usuario\Downloads\servicios.png"width="150" title="servicios">
+<img src="img/servicios.png"width="150" title="servicios">
 
-<img src="C:\Users\Usuario\Downloads\contacto.png"width="150"title="contacto">
+<img src="img/contacto.png"width="150"title="contacto">
 <a/> <p/> </center>
 
-<center><img src="copia1.jpeg" width="25%"> </center>
+<center><img src="img/copia1.jpeg" width="25%"> </center>
 
 <center><h1><font color="red" face="calibri"> Queres ser tu mejor version? </font> </h1></center>
 <center><h2> Si deseas ser tu mejor version necesitas, entrenar con personas idóneas,capacitadas para mejorar tu rendimiento fisico,Tecnico,Tectico y Mental</center> </h2>
@@ -42,4 +42,5 @@
 </center>
 
 </body>
+
 </html>
