--- a/index.html
+++ b/index.html
@@ -1,29 +1,30 @@
 <html>
 
 <head>
-<meta name="description" content="Entrenamiento personal y profesional"
+<meta name="description" content="Bienvenidos nuevamente,aqui encontraras un poco sobre quienes somos"
 <meta name="keyword" content=" entrenamiento"
 
 <title>Entrenamiento Personal y Profesional Elite </title>
 </head>
 <body bgcolor="green" text="White">
-<p> Hola!, Bienvenidos a nuestra Pagina Web de entrenamiento Personalizado
+<p> Bienvenidos nuevamente,aqui encontraras un poco sobre quienes somos.Somos un grupo de Docentes Profesionales del Futbol los cuales nos dedicamos exclusivamente a la Preparacion Fisica de Deportistas de alto rendimiento,tambien amateur pero especialmente Profesionales,Actualmente contamos con un staff de 4 profesionales,dentro de ellos el Director del Centro de Entrenamiento:Danilo Torielli Profesor de Nivel 1:Jorge Mauri Profesor Area Tecnica de Nivel 2:Hugo Tocalli contamos con un Especialista en Nutricionista:Marcos Capoccetti,En el area de psicologia se encuentra Rafael, Galante recientemente incorporado.Tambien contamos con equipo medico quien esta a cargo de la Dr.Ana Lia Aullero.Bien esto es un poco en resumen de quienes somos.
 </p>
 <p> Mi Nombre es Danilo Torielli,Soy Profesor de Educacion Fisica y Preparador Fisico de Futbol. </p>
 <p>Actualmente Trabajo en el Club Atletico Union a cargo de 4ta categoria de A.F.A.Ademas me desempeño como Director del Centro de Entrenamiento Personal y Profesional de Elite</p>
 
 
 <p><center> 
-<a href="https://danilotery.github.io/entrenamiento-personal/"> <img src="C:\Users\Usuario\Downloads\INIC.png"width="75"title="boton de inicio">
- <href="inicio.html"</a>  
-<img src="C:\Users\Usuario\Downloads\quienes somos.png"width="200" title="boton quienes somos">
+<a href="https://danilotery.github.io/entrenamiento-personal/"><img src="img/INIC.png" width="75"title="boton de inicio">
+<href="inicio.html"
+ </a>  
+<a> <img src="img/quienes somos.png"width="200" title="boton quienes somos">
 
-<img src="C:\Users\Usuario\Downloads\servicios.png"width="150" title="servicios">
+<img src="img/servicios.png"width="150" title="servicios">
 
-<img src="C:\Users\Usuario\Downloads\contacto.png"width="150"title="contacto">
- <p/> </center>
+<img src="img/contacto.png"width="150"title="contacto">
+<a/> <p/> </center>
 
-<center><img src="IMG_2284b.JPG" width="25%"> </center>
+<center><img src="img/copia1.jpeg" width="25%"> </center>
 
 <center><h1><font color="red" face="calibri"> Queres ser tu mejor version? </font> </h1></center>
 <center><h2> Si deseas ser tu mejor version necesitas, entrenar con personas idóneas,capacitadas para mejorar tu rendimiento fisico,Tecnico,Tectico y Mental</center> </h2>
@@ -41,4 +42,5 @@
 </center>
 
 </body>
+
 </html>
