--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 <meta name="description" content="Bienvenidos nuevamente,aqui encontraras un poco sobre quienes somos"
 <meta name="keyword" content=" entrenamiento"
+<img src="img/INIC.png" style=border:5px solid red;">
 
+ 
 <title>Entrenamiento Personal y Profesional Elite </title>
 </head>
 <body bgcolor="green" text="White">
@@ -44,3 +46,4 @@
 </body>
 
 </html>
+
